mariadb-5.5 (5.5.36-2) unstable; urgency=low

  * Applied patch to log init output better
    (Closes https://mariadb.atlassian.net/browse/MDEV-5957)

 -- Otto Kekäläinen <otto@seravo.fi>  Fri, 28 Mar 2014 17:55:06 +0200

mariadb-5.5 (5.5.36-1) unstable; urgency=low

  [ Otto Kekäläinen ]
  * New upstream release.
  * Updated Danish debconf translation (Closes: #739750).
  * d/control: Added explicit Conflicts/Replaces for mysql-5.6 packages
    (Closes: #739841).
  * d/control: Update for use of virtual-* packages for switching to/from
    MySQL alternatives.

  [ James Page ]
  * d/control: Drop Nicholas from Uploaders, MIA (Closes: #739360).
  * d/control: Add libjemalloc-dev to BD's.

 -- Otto Kekäläinen <otto@seravo.fi>  Sun, 02 Mar 2014 01:38:26 +0200

mariadb-5.5 (5.5.35-1) unstable; urgency=low

  [ Otto Kekäläinen ]
  * New upstream release, fixing the following security issues:
    - Buffer overflow in client/mysql.cc (Closes: #737597).
      - CVE-2014-0001
    - http://www.oracle.com/technetwork/topics/security/cpujan2014-1972949.html
      - CVE-2013-5891
      - CVE-2013-5908
      - CVE-2014-0386
      - CVE-2014-0393
      - CVE-2014-0401
      - CVE-2014-0402
      - CVE-2014-0412
      - CVE-2014-0420
      - CVE-2014-0437
  * Upstream https://mariadb.atlassian.net/browse/MDEV-4902
    fixes compatibility with Bison 3.0 (Closes: #733002)
  * Updated Russian debconf translation (Closes: #734426)
  * Updated Japanese debconf translation (Closes: #735284)
  * Updated French debconf translation (Closes: #736480)
  * Renamed SONAME properly (Closes: #732967)

 -- James Page <jamespage@debian.org>  Mon, 17 Feb 2014 16:51:52 +0000

mariadb-5.5 (5.5.32-1) unstable; urgency=low

  [ Otto Kekäläinen ]
  * Initial package for Debian (Closes: #565308), based on upstream
    packaging:
    - mariadb-5.3 by Sergei Golubchik
    - mariadb-5.2 by Kristian Nielsen
    - mariadb-5.1 by Peter Lieverdink
  * Bring packaging up-to-date inline with mysql-5.5 packaging.